small fixes on safari

--- a/calendrier/styles/calendrier.css
+++ b/calendrier/styles/calendrier.css
@@ -574,7 +574,6 @@ reunion
 }
 
 #btn-ajouter-reunion {
-    aspect-ratio: 1/1;
     border-radius: 100%;
     background-color: #04071d;
     position: relative;
@@ -661,7 +660,6 @@ reunion
     color: white;
     height: max(10%, 70px);
     max-height: 6em;
-    aspect-ratio: 1/1;
     font-size: 1em;
     min-width: 70px;
     z-index: 2;
